--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@gorhom/bottom-sheet": "^4.4.7",
     "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -18,16 +19,32 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-auth-session": "~4.0.3",
+    "expo-image-picker": "~14.1.1",
+    "expo-jwt": "^1.6.1",
+    "expo-linear-gradient": "^12.3.0",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-image-crop-picker": "^0.40.0",
+    "react-native-image-picker": "^5.6.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-paper": "^5.9.1",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "tailwindcss": "^3.3.3",
+    "twrnc": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
